# agent

./: .coverage  .gitignore  .golangci.yml  AGENT_INSTRUCTIONS.md  CLAUDE.md  FINDINGS.md  HIGH_LEVEL_PLAN.md  PRODUCT_SPECIFICATION.md  README.md  ROADMAP.md  TEST_EVALUATOR.md  Taskfile.yml  go.mod  go.sum  main.go  pyproject.toml  python-cli-development-standards.md  tmp.py
.agent/: Taskfile.yml
.agent/prompts/: preprompts  preprompts.yml
.agent/prompts/personas/: mid-engineer.md  product-owner.md  senior-engineer.md
.agent/prompts/rules/: GO_BEST_PRACTICES.md  commands_usage.md  global_todo_execution.md  go_agent_best_practices.md  go_code_organization.md  python-style-guide-short.md  template.md  testing_guide.md  todo_execution.md  todo_tool_usage.md  todo_usage.md  tool_usage.md
.agent/prompts/system/: context.md  context.yml  tools.md
.agent/prompts/tasks/: check  check.md  check.yml  corrective-actions.md  debug  debug.md  execute-story  execute-story.md  xc  xc.md  (+4 more)
.agent/reports/: user_defined_tasks_proposal.md
.task/checksum/: build
CONTRIBUTING/: python-cli-development-standards.md  python-development-standards.md
agent_test/: complete_prompt.yml  legacy_preprompts  poem_conclusion.md  poem_intro.md  poem_middle.yml  simple_example.yml  stanza1.txt  stanza2.txt  stanzas_3_and_4.yml  test_commands.sh  verify_loading.go
cmd/agent/: main.go  main_test.go
docs/why/: ADR-001-Testing-Architecture.md
editcorrector/: unescaping.go
internal/agent/: agent.go  agent_test.go
internal/config/: config.go  config_test.go  integration_test.go  prompt.go  prompt_test.go
internal/editcorrector/: unescaping.go  unescaping_test.go
internal/errors/: errors.go  errors_test.go
internal/session/: interfaces.go  manager.go  manager_test.go
internal/tools/: commands.go  cp.go  file.go  file_test.go  git.go  mkdir.go  registry.go  registry_test.go  system_tools.go  todo.go  web.go  write_file.go
scripts/: validate-tests.sh
src/python_agent/: __init__.py  agent.py  bash_tool.py  cli.py  config.py  session.py
templates/: preprompts  system.md
templates/personas/: executor.md  grug.md  mid-level-developer.md  product-owner.md
templates/tasks/: execute-story  user-story  user-story.md
test/fixtures/: test_data.go
test/helpers/: config.go  tempdir.go
tests/: __init__.py
tests/api/: __init__.py  test_litellm_integration.py
tests/e2e/: __init__.py  test_complete_workflows.py
tests/fixtures/: __init__.py
tests/helpers/: __init__.py  cli_helpers.py
tests/integration/: __init__.py  test_cli_integration.py
tests/unit/: __init__.py  test_agent.py  test_bash_tool.py  test_cli.py  test_config.py  test_session.py
tools/: list_files.go
(+34 files in other folders)
